--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .App-link {
   color: #61dafb;
 }
+body {
+  background-color: #0e1621;
+  transition: all 0.4s;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  font-size: 18px;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+@media (max-width: 1120px) {
+  .container {
+    max-width: 900px;
   }
-  to {
-    transform: rotate(360deg);
+  body {
+    font-size: 16px;
   }
+}
+
+@media (max-width: 920px) {
+  .container {
+    max-width: 700px;
+  }
+  body {
+    font-size: 14px;
+  }
+}
+@media (max-width: 720px) {
+  .container {
+    max-width: 500px;
+  }
+  body {
+    font-size: 13px;
+  }
+}
+
+.App {
+  background-color: #0e1621;
+}
+*::-webkit-scrollbar-thumb {
+  background: rgb(102 171 224 / 66%);
+  border-radius: 3px;
 }
