logoes were changed

--- a/src/components/SiteBar/SiteBar.css
+++ b/src/components/SiteBar/SiteBar.css
@@ -8,6 +8,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
+  z-index: 10;
 }
 .SiteNav_ul {
   flex-direction: column;
